# m5-atoms3u-esp-idf-examples

./: README.md
dev_reset_test/: main.c  sdkconfig.defaults  sdkconfig.old
dev_reset_test/main/: button.h  idf_component.yml  main.c  storage.h
dev_tinyusb-hid-keyboard-with-msc-settings/: failed  sdkconfig.defaults
dev_tinyusb-hid-keyboard-with-msc-settings/main/: app.h  main.c
dev_tinyusb-hid-keyboard2-with-msc-settings/: sdkconfig.old
dev_tinyusb-hid-keyboard2-with-msc-settings/main/: CMakeLists.txt  idf_component.yml  led.h  main.c  storage.h
dev_tinyusb-hid-keyboard3-with-msc-settings/: README.md  sdkconfig.old
dev_tinyusb-hid-keyboard3-with-msc-settings/main/: CMakeLists.txt  app.h  button.h  keyboard.h  led.h  main.c  storage.h
dev_tinyusb-ncm-wifi-usb-with-msc-settings/: CMakePresets.json  sdkconfig.defaults
dev_tinyusb-ncm-wifi-usb-with-msc-settings/main/: CMakeLists.txt  app.h  idf_component.yml
tinyusb-hid-keyboard/: .gitignore
tinyusb-hid-keyboard-with-msc-settings/: sdkconfig.defaults  sdkconfig.old
tinyusb-hid-keyboard-with-msc-settings/main/: CMakeLists.txt  app.h  storage.h
tinyusb-hid-keyboard2/: CMakePresets.json  sdkconfig  sdkconfig.old
tinyusb-hid-keyboard2-with-msc-settings/: sdkconfig.defaults
tinyusb-hid-keyboard2-with-msc-settings/main/: CMakeLists.txt  app.h  idf_component.yml
tinyusb-msc-settings/: CMakePresets.json  README.md
tinyusb-ncm-wifi-usb/: .gitignore  CMakePresets.json  README.md  pytest_usb_device_ncm.py  sdkconfig.old
tinyusb-ncm-wifi-usb-with-msc-settings/: sdkconfig.defaults
(+22 files in other folders)
